--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.7.RELEASE</version>
+		<version>2.2.2.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.mvp</groupId>
+	<groupId>com.example</groupId>
 	<artifactId>event-listing</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>event-listing</name>
-	<description>This is the event listing micro service</description>
+	<description>event listing</description>
 
 	<properties>
 		<java.version>1.8</java.version>
